add javaFK info