@@ -1,5 +1,9 @@
 # Musikverwaltung
 
+## JavaFX 18.0.1 SDK
+
+Run with Java VM Options: --module-path lib/openjfx-18.0.1_windows-x64_bin-sdk/javafx-sdk-18.0.1/lib --add-modules=javafx.controls,javafx.fxml
+
 ## Aufgabe
 Erstellen Sie ein Programm, welches Musikstücke verwaltet. Hierbei soll zu jedem
 Musikstück Zusatzinformation wie Titel, Interpret, Genre usw. gehalten werden. Der
